🎮 Sky Journey for Two - 完整版本发布
✨ 新增功能:
- 🌐 跨设备在线房间系统 (创建/加入/浏览房间)
- 🎵 Web Audio API 音效系统 (骰子/按钮/胜利等音效)
- 🎶 BGM背景音乐系统 (浪漫/欢快/轻松三种风格)
- 🤖 智能昵称生成器 (多主题自动生成可爱昵称)
- 🎪 五级任务分级系统 (情侣/温柔/好友/热恋/狂热版)
- 🎲 3D骰子动画与音效反馈
- 🏠 完善的房间管理 (心跳检测/断线重连)
- 🛠️ 管理后台重构 (实时监控/参数调节/日志流)

🎨 UI/UX优化:
- 毛玻璃效果与渐变背景
- 流畅的按钮悬停与点击动画
- 响应式设计适配多设备
- 连接状态实时显示
- 错误提示与加载状态

🔧 技术改进:
- Socket.IO实时通信优化
- 房间状态管理与自动清理
- 音频管理器 (音量控制/启用切换)
- Context状态管理重构
- Git忽略规则完善

📚 文档完善:
- 用户使用指南 (USER_GUIDE.md)
- 功能介绍与技术栈说明
- 安装部署指引
- 常见问题解答

🎯 游戏体验:
- 真正的跨设备对战体验
- 沉浸式音效与视觉效果
- 智能化用户交互
- 完整的管理监控系统

--- a/client/package.json
+++ b/client/package.json
@@ -10,12 +10,12 @@
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "socket.io-client": "^4.7.2",
     "framer-motion": "^10.16.4",
+    "react": "^18.2.0",
     "react-confetti": "^6.1.0",
-    "react-router-dom": "^6.8.1"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.30.1",
+    "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
