✨ feat: 云端任务编辑器同步功能（初版）
- 新增 server/ Node.js+Express+MongoDB 云端API
- 新增 src/services/cloudSyncService.js 前端同步服务
- taskLibraryManager 支持云端同步、冲突检测、分享
- docs/cloud-sync-design.md 设计文档
- server/README.md、.env.example、vercel.json 部署文档
- 分支：feature/cloud-task-sync

后续可完善同步UI与冲突处理界面

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,11 @@ out/
 .env.test.local
 .env.production.local
 
+# Server environment
+server/.env
+server/node_modules/
+server/dist/
+
 # Runtime data
 pids
 *.pid
