--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "preview": "vite preview",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "deploy": "npm run build && gh-pages -d dist",
-    "predeploy": "npm run build"
+    "predeploy": "npm run build",
+    "server:install": "cd server && npm install",
+    "server:dev": "cd server && npm run dev",
+    "server:start": "cd server && npm start",
+    "dev:full": "concurrently \"npm run dev\" \"npm run server:dev\"",
+    "setup": "npm install && npm run server:install"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -24,7 +29,8 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "concurrently": "^8.2.0"
   },
   "keywords": [
     "game",
